# tabelog-adapter

./: .gitignore  Cargo.toml  license-apache  license-mit  readme.md
src/: lib.rs  main.rs
src/https_client/: https_client_builder.rs  mod.rs
src/tabelog/: date_time_extension.rs  mod.rs  search_condition.rs  tabelog_client.rs  tabelog_source.rs
tests/: tabelog_searcher.rs
